# BloombergFetch

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  bbg_fetch.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
bbg_fetch/: __init__.py  _blp_api.py  bbg_fetch.py  core.py  local_tests.py  option_chain.py
bbg_fetch/tests/: integration_tests.py
examples/: fetch_core_data.py  fetch_div_history.py  fetch_option_chain.py
tests/: test_option_chain.py  test_pure.py
