[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bbg-fetch"
version = "2.0.3"
description = "Python functionality for getting different data from Bloomberg: prices, implied vols, fundamentals"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Artur Sepp", email = "artursepp@gmail.com"},
]
maintainers = [
    {name = "Artur Sepp", email = "artursepp@gmail.com"},
]
keywords = [
    "bloomberg",
    "bloomberg api",
    "financial data",
    "market data",
    "implied volatility",
    "quantitative finance",
    "blpapi",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"

dependencies = [
    "numpy>=2.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/ArturSepp/BloombergFetch"
Repository = "https://github.com/ArturSepp/BloombergFetch.git"
Issues = "https://github.com/ArturSepp/BloombergFetch/issues"

[tool.setuptools.packages.find]
include = ["bbg_fetch*"]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --tb=short"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
extend-ignore = ["E501"]  # line length not enforced; existing code has many long lines

[tool.ruff.lint.per-file-ignores]
"bbg_fetch/__init__.py" = ["F401"]      # intentional re-exports
"bbg_fetch/tests/*"     = ["F401", "F541"]  # dev-only integration scripts

[tool.coverage.run]
source = ["bbg_fetch"]
omit = ["*/tests/*"]